Fixed footer overlapping content and white bar at bottom of the pages.

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,6 +2,7 @@ html, body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
+	padding-bottom: 125px;
 }
 h1 { 
 	color: white;
@@ -41,7 +42,7 @@ p {
 	width: 100%;
 }
 .container {
-	min-height: 85%;
+	min-height: 100%;
 	margin-bottom: 0px;
 }
 ul {
